# tuberlens

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pr-checks.yml
data/deception/: test_inputs.yaml
data/high-stakes/: combined_deployment_22_04_25.jsonl  test_inputs.yaml
data/policy/: test_inputs.yaml  training.csv
notebooks/: probe_training.py
notebooks/examples/: cross_validation.ipynb  deception.ipynb  high-stakes.ipynb  policy.ipynb
src/potato/: config.py  cross_validation.py  evaluation.py  model.py  training.py  utils.py
src/potato/interfaces/: activations.py  dataset.py  probes.py
src/potato/probes/: probe_factory.py  probe_store.py  pytorch_classifiers.py  pytorch_probes.py  sklearn_probes.py
src/tuberlens/: cross_validation.py  evaluation.py  model.py  training.py  utils.py
src/tuberlens/interfaces/: activations.py  dataset.py  probes.py
src/tuberlens/probes/: probe_factory.py  probe_store.py  pytorch_classifiers.py  pytorch_modules.py  pytorch_probes.py  sklearn_probes.py
